# clinical-trial-ops-env

./: Dockerfile  LICENSE  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  upload_to_hf.py
clinical-trial-ops-env/: Dockerfile  api.py  debug.py  err.txt  error2.txt  inference.py  openenv.yaml  out3.txt  pyproject.toml  requirements.txt  result.txt  result2.txt  result3.txt
server/: app.py
