[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "clinical-trial-ops-env"
version = "1.0.0"
description = "OpenEnv-compliant AI agent environment — clinical trial coordinator for Phase II NSCLC oncology study"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["openenv", "reinforcement-learning", "clinical-trials", "healthcare", "agent-evaluation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "pydantic==2.7.1",
    "numpy==1.26.4",
    "openai==1.35.3",
    "httpx==0.27.0",
    "python-multipart==0.0.9",
    "aiofiles==23.2.1",
]

[project.scripts]
serve = "server.app:app"
clinical-trial-ops-env = "server.app:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "server*"]

[openenv]
name = "clinical-trial-ops-env"
version = "1.0.0"
entry_point = "server.app:app"
reset_endpoint   = "/reset"
step_endpoint    = "/step"
state_endpoint   = "/state"
tasks_endpoint   = "/tasks"
health_endpoint  = "/health"
reward_range     = [-0.20, 1.0]
observation_type = "ClinicalObservation"
action_type      = "ClinicalAction"
tasks = [
    "eligibility_screening",
    "lab_dose_management",
    "sae_triage",
]
